# 0bs2

./: .gitattributes  .gitignore  0BS_box_2.cpp  0BS_box_2.h  0BS_box_2.vcxproj  0BS_box_2.vcxproj.filters  BUILDER.bat  BUILDER.ps1  CMakeLists.txt  CMakePresets.json  README.md  RUN_BUILDER.bat  build-ninja.bat  build_cuda.bat  build_dml.bat  build_no-options.bat  build_no-options.ps1  funding.yaml  non_cuda.sln  package-dml.ps1
TeensyMouseSerialPassthrough/: TeensyMouseSerialPassthrough.ino
capture/: capture.cpp  capture.h  capture_geometry.h  duplication_api_capture.cpp  duplication_api_capture.h  udp_capture.cpp  udp_capture.h  virtual_camera.h  winrt_capture.cpp  winrt_capture.h
cmake/: OBS2Dependencies.cmake
config/: config.cpp  config.h
cuda/: 0BS_cuda.sln  0BS_cuda.vcxproj  0BS_cuda.vcxproj.filters  README.md  build-cuda.ps1  build-deps.ps1  build-yolo-worker.ps1  export-engine.ps1  yolo_annotation_worker.vcxproj
cuda/include/: nvinf.h  trt_compat.h  trt_monitor.h
cuda/include/tensorrt/: nvinf.h  trt_compat.h  trt_monitor.h
depth/: depth_utils.cpp
detector/: cuda_preprocess.cu  cuda_preprocess.h  detection_buffer.h  dml_detector.cpp  dml_detector.h  postProcess.cpp  postProcess.h  trt_detector.cpp  trt_detector.h
diagnostics/: Logger.cpp  Logger.h
docs/: build-modernization.md  program-flow.mmd
docs/settings-reference/: README.md  generate_settings_reference.py  settings-index.csv
docs/superpowers/plans/: 2026-05-18-cuda-build-isolation.md  2026-05-20-teensy41-rawhid-implementation.md
docs/superpowers/specs/: 2026-05-20-teensy41-rawhid-design.md
include/: aim_imm.h  aim_kalman.h  convergence_governor.h  ego_motion_compensator.h  other_tools.h  real_world_data_logger.h
keyboard/: keyboard_listener.cpp
modules/makcu/src/: serialport.cpp
mouse/: Arduino.cpp  Arduino.h  BoxTarget.cpp  BoxTarget.h  Makcu.cpp  Makcu.h  MouseInput.cpp  MouseInput.h  OnnxPidGovernor.cpp  OnnxPidGovernor.h  PidGovernor.cpp  PidGovernor.h  PidMouseController.cpp  PidMouseController.h  SmartBlender.cpp  SmartBlender.h  Teensy41RawHid.cpp  Teensy41RawHid.h  ghub.cpp  ghub.h  kmboxNetConnection.cpp  mouse.cpp  mouse.h  rzctl.cpp  rzctl.h
mouse/kmbox_net/: kmboxNet.cpp
neural/: NeuralTracker.cpp  NeuralTracker.h  TemporalPredictor.cpp  TemporalPredictor.h
neural/targeting/: NeuralTargetingHead.cpp  NeuralTargetingHead.h
neural_models/: neural_targeting_head.json  neural_tracker.json  pid_governor.json  pid_governor_onnx.json  temporal_predictor.json
overlay/: config_dirty.cpp  config_dirty.h  draw_ai.cpp  draw_buttons.cpp  draw_capture.cpp  draw_debug.cpp  draw_depth.cpp  draw_game_overlay.cpp  draw_mouse.cpp  draw_neural.cpp  draw_overlay.cpp  draw_settings.h  draw_stats.cpp  draw_target.cpp  overlay.cpp  overlay.h
runtime/: RuntimeSupervisor.cpp  RuntimeSupervisor.h  game_overlay_loop.cpp  mouse_thread_loop.cpp  thread_loops.h
scr/: other_tools.cpp
tests/cpp/: capture_geometry_tests.cpp  convergence_governor_tests.cpp  postprocess_tests.cpp  targeting_convergence_tests.cpp  targeting_math_tests.cpp  test_harness.h  tracker_state_tests.cpp  unreal_synthetic_targeting_tests.cpp
tests/cpp/shims/: 0BS_box_2.h
tools/: build_common.ps1  build_cuda.ps1  build_dml.ps1  build_worker.ps1
training/: README.md  evaluate.py  evaluate_neural_targeting.py  evaluate_neural_tracker.py  export_neural_tracker_onnx.py  export_pid_governor_onnx.py  generate_neural_tracker_dataset.py  requirements.txt  train_gui.py  train_neural_targeting.py  train_neural_tracker.py  train_pid_governor.py  train_temporal.py
training/data_gen/: __init__.py  convert_real_world_logs.py  generate_targeting_data.py  generate_track_data.py
training/neural_targeting/: __init__.py  dataset.py  model.py
training/neural_tracker/: __init__.py  dataset.py
training/pid_governor/: dataset.py
training/temporal_predictor/: __init__.py  dataset.py  model.py
training/tests/: test_auto_build_scripts_contract.py  test_auto_train_pid_governor.py  test_build_packages_contract.py  test_capture_to_screen_geometry_contract.py  test_cmake_modernization_contract.py  test_config_gui_control_contract.py  test_control_loop_synthetic.py  test_cuda_build_isolation_contract.py  test_debug_log_file_contract.py  test_detection_tracking_contract.py  test_direct_targeting_contract.py  test_ego_motion_compensation_contract.py  test_imm_estimator_contract.py  test_inneraim_tracking_contract.py  test_legacy_cleanup_contract.py  test_makcu_serial_contract.py  test_neural_targeting_head_contract.py  test_neural_targeting_trainer_contract.py  test_neural_tracker_contract.py  test_neural_tracker_runtime_contract.py  test_neural_tracker_trainer_contract.py  test_ninja_build_bat_contract.py  test_package_dml_contract.py  test_perfect_aim_v1_contract.py  test_phase4_smart_blending_contract.py  test_pid_default_values_contract.py  test_pid_feed_forward_contract.py  test_pid_governor_cpp_contract.py  test_pid_governor_gui_contract.py  test_pid_governor_trainer_contract.py  test_razer_input_contract.py  test_real_world_finetuning_contract.py  test_realtime_detection_contract.py  test_removed_ml_cleanup_contract.py  test_runtime_architecture_contract.py  test_teensy41_hid_contract.py  test_teensy41_mouse_contract.py  test_temporal_predictor_contract.py  test_temporal_trainer_contract.py  test_tensor_rt_export_script_contract.py  (+2 more)
worker/: ndjson_protocol.cpp  ndjson_protocol.h  tensorrt_batch_detector.cpp  tensorrt_batch_detector.h  yolo_annotation_worker.cpp
